# sweatervest

./: .gitignore  COPYING  README.md  README.rst  pyproject.toml  setup.py
.github/: copilot-instructions.md
sweatervest/: __init__.py  circle.py  convex_polygon.py  cubic_hermite_path.py  group.py  linepath.py  micropolygonmesh.py  parser.py  scene.py  util.py
tests/: test_parser.py  test_util.py
tests/data/: test_scene.yaml
