[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sweatervest"
version = "0.1.0"
description = "Scene graph description language for Victor and Handsome projects"
readme = "README.md"
requires-python = ">=3.3"
license = "MIT"
authors = [
    {name = "Stephen [Bracket] McCray", email = "mcbracket@gmail.com"}
]
keywords = ["scene graph", "yaml", "graphics", "rendering", "2d"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/bracket/sweatervest"
Repository = "https://github.com/bracket/sweatervest"
Issues = "https://github.com/bracket/sweatervest/issues"

[tool.setuptools]
packages = ["sweatervest"]

[tool.setuptools.package-data]
sweatervest = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by line-length)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
